--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<link rel="icon" type="image/png" href="<%= asset('favicon.ico') %>">
 
 	<link href="/plugins/bootstrap-3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="/plugins/font-awesome-4.4.0/css/font-awesome.css" rel="stylesheet" type="text/css" />
