--- a/public/plugins/bootstrap-3.2.0/css/bootstrap.css
+++ b/public/plugins/bootstrap-3.2.0/css/bootstrap.css
@@ -263,8 +263,8 @@ th {
 @font-face {
   font-family: 'Glyphicons Halflings';
 
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('../fonts/glyphicons-halflings-regular.eot?$modena=vrokil');
+  src: url('../fonts/glyphicons-halflings-regular.eot?$modena=vrokil#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff?$modena=vrokil') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf?$modena=vrokil') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg?$modena=vrokil#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
